--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;800&display=swap");
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
+  font-family: "JetBrains Mono", monospace;
 }
 
 html,
@@ -13,25 +16,41 @@ body {
 body {
   display: grid;
   place-items: center;
-  /* scale: 2; */
   shape-rendering: crisp-edges;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .map {
   --grid-size: 0px;
+  --grid-squares: 0;
   --game-speed: 0ms;
+  --grid-opacity: 0.1;
 
   outline: 1px solid black;
-  background-image: linear-gradient(rgba(0, 0, 0, 0) 96%, rgba(0, 0, 0, 0.15) 96%),
-    linear-gradient(90deg, rgba(0, 0, 0, 0) 96%, rgba(0, 0, 0, 0.15) 96%);
+  background-image: linear-gradient(rgba(0, 0, 0, 0) 96%, rgba(0, 0, 0, var(--grid-opacity)) 96%),
+    linear-gradient(90deg, rgba(0, 0, 0, 0) 96%, rgba(0, 0, 0, var(--grid-opacity)) 96%);
   background-size: var(--grid-size) var(--grid-size);
   position: relative;
+}
+
+.restart {
+  position: relative;
+  top: calc(var(--grid-size) * (var(--grid-squares) / 2) - var(--grid-size) * 2);
+  height: calc(var(--grid-size) * 4);
+  z-index: 2;
+  background-color: black;
+  color: white;
 }
 
 .snake {
   position: absolute;
   background-color: black;
-  border: 1px solid green;
   width: var(--grid-size);
   height: var(--grid-size);
   z-index: 1;
@@ -41,7 +60,13 @@ body {
 
 .apple {
   position: absolute;
-  background-color: rgb(145, 0, 0);
+  background-color: rgb(70, 140, 20);
+  border-radius: calc(var(--grid-size) / 3);
   width: var(--grid-size);
   height: var(--grid-size);
+}
+
+/* Utility Classes */
+.hidden {
+  display: none;
 }
